@@ -24,17 +24,18 @@ endfunction()
 set(TARGETS_MAN "")
 set(TARGETS_HTM "")
 
-one_page(cerf      3 cerf)
-one_page(cerfc     3 cerf)
-one_page(dawson    3 dawson)
-one_page(cdawson   3 dawson)
-one_page(erfcx     3 erfcx)
-one_page(cerfcx    3 erfcx)
-one_page(erfi      3 erfi)
-one_page(cerfi     3 erfi)
-one_page(voigt     3 voigt)
-one_page(w_of_z    3 w_of_z)
-one_page(im_w_of_z 3 w_of_z)
+one_page(cerf       3 cerf)
+one_page(cerfc      3 cerf)
+one_page(dawson     3 dawson)
+one_page(cdawson    3 dawson)
+one_page(erfcx      3 erfcx)
+one_page(cerfcx     3 erfcx)
+one_page(erfi       3 erfi)
+one_page(cerfi      3 erfi)
+one_page(voigt      3 voigt)
+one_page(voigt_hwhm 3 voigt_hwhm)
+one_page(w_of_z     3 w_of_z)
+one_page(im_w_of_z  3 w_of_z)
 
 message(STATUS "targets man: ${TARGETS_MAN}")
 message(STATUS "targets htm: ${TARGETS_HTM}")
