@@ -8,15 +8,17 @@
 
 =head1 NAME
 
-voigt - Voigt's function, convolution of Gaussian and Lorentzian
+voigt_hwhm - Half width at half maximum of Voigt's function
 
 =head1 SYNOPSIS
 
 B<#include <cerf.h>>
 
-B<double voigt ( double x, double sigma, double gamma );>
+B<double voigt_hwhm ( double sigma, double gamma );>
 
 =head1 DESCRIPTION
+
+The function B<voigt_hwhm> returns the half width at half maximum of the function B<voigt>.
 
 The function B<voigt> returns Voigt's convolution
 
@@ -32,27 +34,9 @@ and a Lorentzian
 
 with the integral extending from -infinity to +infinity.
 
-If sigma=0, L(x,gamma) is returned. Conversely, if gamma=0, G(x,sigma) is returned.
-
-If sigma=gamma=0, the return value is Inf for x=0, and 0 for all other x. It is advisable to test input arguments to exclude this irregular case.
-
-=head1 REFERENCES
-
-Formula (7.4.13) in Abramowitz & Stegun (1964) relates Voigt's convolution integral to Faddeeva's function B<w_of_z>, upon which this implementation is based:
-
-   voigt(x,sigma,gamma) = Re[w(z)] / sqrt(2*pi) / |sigma|
-
-with
-
-   z = (x+i*|gamma|) / sqrt(2) / |sigma|.
-
-
 =head1 SEE ALSO
 
-B<voigt_hwhm(3)>
-
-Related complex error functions:
-B<w_of_z(3)>, B<dawson(3)>, B<cerf(3)>, B<erfcx(3)>, B<erfi(3)>.
+B<voigt(3)>
 
 Homepage: http://apps.jcns.fz-juelich.de/libcerf
 
@@ -65,7 +49,7 @@ Please report bugs to the authors.
 
 =head1 COPYING
 
-Copyright (c) 2013 Forschungszentrum Juelich GmbH
+Copyright (c) 2018 Forschungszentrum Juelich GmbH
 
 Software: MIT License.
 
